@@ -1,4 +1,8 @@
-2012-12-16 Simon Flöry <simon.floery@rechenraum.com>
+2013-01-02 Simon Flöry <simon.floery@rechenraum.com>
+	* fixed left shift / right shift in formula entry mode (thanks to Thure 
+		Dührsen for reporting, closes sf.net #81)
+
+2012-12-26 Simon Flöry <simon.floery@rechenraum.com>
 	* add Turkish translation (thanks to Oğuz Yarımtepe and all others for
 		contributing, fixes sf.net #86)
 
